// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Programmatic API handles OPTIONS request by default: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "x-powered-by: Express",
  ],
  "status": 204,
  "text": "",
}
`;

exports[`Programmatic API handles OPTIONS request by default: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 15",
    "content-type: application/json; charset=utf-8",
    "etag: W/"f-XQOV7Ex+Zz6oKU7EkBkfIkg20jQ"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"requests":[]}",
}
`;

exports[`Programmatic API handles OPTIONS request by default: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 15",
    "content-type: application/json; charset=utf-8",
    "etag: W/"f-XQOV7Ex+Zz6oKU7EkBkfIkg20jQ"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"requests":[]}",
}
`;

exports[`Programmatic API listens: getAdminServerURLs 1`] = `
[
  "http://localhost:3001/",
  "http://192.168.1.6:3001/",
  "http://fe80::1:3001/",
]
`;

exports[`Programmatic API listens: getMockServerURLs 1`] = `
[
  "http://localhost:3000/",
  "http://192.168.1.6:3000/",
  "http://fe80::1:3000/",
]
`;

exports[`Programmatic API sends CORS headers by default: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 30",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":1,"email":"foo@bar.baz"}",
}
`;

exports[`Programmatic API sends CORS headers by default: response 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 44",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 404,
  "text": "{"statusCode":404,"message":"No user found"}",
}
`;

exports[`Programmatic API sends CORS headers by default: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 184",
    "content-type: application/json; charset=utf-8",
    "etag: W/"b8-zeFvSyCx21bNoh0SiV1VNPsExNs"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"base","route":"GET_USER:success","request":{"method":"GET","url":"/user"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works: response 1`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 239",
    "content-type: text/html; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "<!DOCTYPE html>
<html>
    <head>
        <title>Pseudo IAM login page</title>
    </head>
    <body>
        <h1>Welcome to Pseudo login page</h1>
        <a href="/?state=fooBar&code=cb485bf">click here to log in</a>
    </body>
</html>
",
}
`;

exports[`Programmatic API works: response 2`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 2",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 401,
  "text": "{}",
}
`;

exports[`Programmatic API works: response 3`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 239",
    "content-type: text/html; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "<!DOCTYPE html>
<html>
    <head>
        <title>Pseudo IAM login page</title>
    </head>
    <body>
        <h1>Welcome to Pseudo login page</h1>
        <a href="/?state=fooBar&code=cb485bf">click here to log in</a>
    </body>
</html>
",
}
`;

exports[`Programmatic API works: response 4`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 21",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"accessToken":"foo"}",
}
`;

exports[`Programmatic API works: response 5`] = `
{
  "headers": [
    "access-control-allow-headers: *",
    "access-control-allow-methods: OPTIONS,POST,GET",
    "access-control-allow-origin: *",
    "connection: close",
    "content-length: 30",
    "content-type: application/json; charset=utf-8",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"id":1,"email":"foo@bar.baz"}",
}
`;

exports[`Programmatic API works: session-details 1`] = `
{
  "headers": [
    "connection: close",
    "content-length: 15",
    "content-type: application/json; charset=utf-8",
    "etag: W/"f-XQOV7Ex+Zz6oKU7EkBkfIkg20jQ"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"requests":[]}",
}
`;

exports[`Programmatic API works: session-details 2`] = `
{
  "headers": [
    "connection: close",
    "content-length: 50",
    "content-type: application/json; charset=utf-8",
    "etag: W/"32-CIEAWi/2iMVd+dZF6OdYItOTopU"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"unauthenticated","requests":[]}",
}
`;

exports[`Programmatic API works: session-details 3`] = `
{
  "headers": [
    "connection: close",
    "content-length: 209",
    "content-type: application/json; charset=utf-8",
    "etag: W/"d1-Sj4w7SQiUOimUiEXp4/U3lqtjEU"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"unauthenticated","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works: session-details 4`] = `
{
  "headers": [
    "connection: close",
    "content-length: 374",
    "content-type: application/json; charset=utf-8",
    "etag: W/"176-QTTZB1OBQNF6cZn/ypFkieI5Q1E"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"unauthenticated","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}}]}",
}
`;

exports[`Programmatic API works: session-details 5`] = `
{
  "headers": [
    "connection: close",
    "content-length: 363",
    "content-type: application/json; charset=utf-8",
    "etag: W/"16b-ylJ9Z6hvE0Y7c4mgMMogIoePkDE"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}}]}",
}
`;

exports[`Programmatic API works: session-details 6`] = `
{
  "headers": [
    "connection: close",
    "content-length: 512",
    "content-type: application/json; charset=utf-8",
    "etag: W/"200-U+jF+dTCPZwMKtgy+dhMbYZWT0Y"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}},{"timestamp":1676886788388,"collection":"base","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works: session-details 7`] = `
{
  "headers": [
    "connection: close",
    "content-length: 667",
    "content-type: application/json; charset=utf-8",
    "etag: W/"29b-bY53OVUb68ISMI8M55LWFQ38BUY"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"unauthenticated","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"unauthenticated","route":"GET_USER:unauthenticated","request":{"method":"GET","url":"/user"},"response":{"statusCode":401}},{"timestamp":1676886788388,"collection":"base","route":"LOGIN_PAGE:success","request":{"method":"GET","url":"/login"},"response":{"statusCode":200}},{"timestamp":1676886788388,"collection":"base","route":"LOGIN_PAGE_POST:success","request":{"method":"POST","url":"/login"},"response":{"statusCode":200}}]}",
}
`;

exports[`Programmatic API works: session-details 8`] = `
{
  "headers": [
    "connection: close",
    "content-length: 39",
    "content-type: application/json; charset=utf-8",
    "etag: W/"27-8/Q+IbW7jZ2tzRZSTJBF8yo08vI"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[]}",
}
`;

exports[`Programmatic API works: session-details 9`] = `
{
  "headers": [
    "connection: close",
    "content-length: 184",
    "content-type: application/json; charset=utf-8",
    "etag: W/"b8-zeFvSyCx21bNoh0SiV1VNPsExNs"",
    "x-powered-by: Express",
  ],
  "status": 200,
  "text": "{"collectionName":"base","requests":[{"timestamp":1676886788388,"collection":"base","route":"GET_USER:success","request":{"method":"GET","url":"/user"},"response":{"statusCode":200}}]}",
}
`;
